
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 FEB 13a
  * in cycle/tsemf/_AF/tsemf.c
    - in update_dUstar_emfield_IMAF(), added a is_node_bdry() before
      calling find_bdry_direc()
  * in model/emfield/_Epotential/emfield.c
    - in find_linearization_coefficients_bdry_node_emfield(), added 
      assert(is_node_bdry(np[lA],TYPELEVEL_EMFIELD))
  * in src/bdry.c
    - in read_bdry_actions(), in calling Faces(), zone should be set first to zone=gl->domain_lim
      instead of zone=gl->domain_all
      

2023 FEB 12a
  * in model/metrics/_generic/metrics.c
    - in find_unit_vector_normal_to_boundary_plane(), now uses is_node_bdry_with_single_direc()
      to determine valid nearby bdry nodes instead of probing for bdry nodes with the same
      bdry node type as given by _node_type(np[lA], TYPELEVEL)
  * in src/bdry.c
    - added is_node_bdry_with_single_direc()
    - in is_multiple_bdry_direc() and in find_bdry_direc(), added 
      assert(is_node_bdry(np[l_A],TYPELEVEL));
  

2023 FEB 10a
  * in src/bdry.c
    - in update_node_type(), fixed a bug: need to call is_zone_intersecting_zone() before
      calling _zone_intersection()
      

2023 FEB 09a
  * in model/chem/_C2H4_Air_Plasma_36s/chem.c
    - fixed bug IONIZATIONREACTION[67] is now IONIZATIONREACTION[79]
  * in src/bdry.c
    - in read_block(), improved the error messages
  

2023 FEB 03b
  * in src/bdry.c
    - in write_block_template() and read_block_actions(), changed the name of _EMFIELD_ACTIONNAME
      to EMField and the name of _FLUID_ACTIONNAME to Fluid
  * in bin/*wrp
    - fixed the wrp files so they can be read with the latest src/bdry.c Block() action
    

2023 FEB 03a
  * in lib/gridg/2Dbase.c